GitVersion1/objects/CANQueueMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>QueueId__c</fullName>
        <label>QueueId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueName__c</fullName>
        <label>QueueName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>SubType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>CAN Queue Mapping</label>
</CustomObject>